- Fixed #1152: Reset password email should be i18ned.
- Made the history of documents display the full name of the users instead of
  the usernames.
- Updated the default profile so that portlets have their default guard set as
  previously.
- Fixed the login form so that it renders well on MSIE too.
- Test for #1239 Folderish documents workflows are not enough
recursivefolderish document is republished
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Less restrictive permission check to allow
  a user to use the form in folder_contents
  was: 'Delete Folder', now is: 'Modify Portal Content'
  because the form button now handles correctly
  each perm.
- Removed obsolete widget types registration.
- tune #1133: getSortedContentTypes.py is too slow
- effective_date gets automatically updated at publish time (in
  section_content_wf) if no specific dates were set by the user
- CPSDefault.utils provides a fast filterContents function that replace the one
  in skins/cps_default/filterContents.py, the interface is changed a bit:
  * you must supply the `context` as the first parameter
  * `displayed` is renamed `filter_ptypes` and default is None instead of ['']
  * `sort_by` is renamed into `sort_on` and default is None
  * `direction` is renamed into `sort_order`
- CPSDefault.utils provides getFolderContents and getCatalogFolderContents.
- New indexes: container_path, position_in_container and nodes set.
- Adding a boolean property 'use_catalog_for_folder_contents' to a folder will
  makes the skins/cps_default/getFolderContents.py (and thus folder_contents
  and folder_view) uses the catalog to get the folder contents.
  This is faster especially on huge folder.
- added deprecation information for CPSBoxes modules.
- the "Edit this text" link on the welcome message goes to the portlet editor.
- added a temporary "folder contents" portlet in the main part of the screen
  until there is a more extended view for it (cf. #573)