@@ -54,11 +54,6 @@
      url_expr="string:${portal_url}/vocabularies_manage_form" visible="True">
    <permission>Modify portal content</permission>
   </action>
-  <action title="action_manage_languages" action_id="manage_languages"
-     category="global" condition_expr=""
-     url_expr="string:${portal_url}/language_manage_form" visible="True">
-   <permission>Modify portal content</permission>
-  </action>
   <action title="action_add_favorites" action_id="add_favorites"
      category="user"
      condition_expr="python: member and portal.portal_membership.getHomeFolder()"
@@ -123,7 +118,7 @@
  <action-provider name="portal_properties">
   <action title="Reconfigure Portal" action_id="configPortal"
      category="global" condition_expr=""
-     url_expr="string:${portal_url}/reconfig_form" visible="True">
+     url_expr="string:${portal_url}/config_form" visible="True">
    <permission>Manage portal</permission>
   </action>
  </action-provider>
