@@ -1,95 +1,0 @@
-<tal:cvs-id tal:replace="nothing">$Id$</tal:cvs-id>
-<metal:html>
-<metal:body use-macro="here/main_template/macros/master">
-
-<metal:header fill-slot="header"
-  tal:define="global context_urlc python:here.getContextUrl(utool=utool,
-                                                            concat=1)">
-
-  <tal:security condition="python:not checkPerm('Manage languages', here)">
-    <tal:redirect define="response request/RESPONSE;
-                          dummy python:response.redirect(context_url)" />
-  </tal:security>
-
-  <h1 i18n:translate="heading_language_manage_form">Manage languages</h1>
-  <p i18n:translate="description_languages_form">
-    This page give you the opportunity to manage languages available on the portal.
-  </p>
-</metal:header>
-
-<metal:main fill-slot="main"
-            tal:define="language_voc here/portal_vocabularies/language_voc;
-                        language_keys python:language_voc.keysSortedBy('i18n');
-                        languages python:[lang['id'] for lang in here.translation_service.getLanguagesMap()];
-                        default_language here/translation_service/getDefaultLanguage;">
-
-<tal:block tal:condition="python:len(languages) > 0">
-  <h2 i18n:translate="language_set_default">Set default portal language</h2>
-  <form tal:attributes="action here/portal_url" method="post">
-    <p>
-    <label for="defaultLanguageChooser"
-           i18n:translate="label_language">Language</label>
-    <select name="default_language" id="defaultLanguageChooser">
-      <tal:language repeat="language language_keys">
-        <option tal:condition="python:language in languages"
-                tal:attributes="value language;
-                                label language;
-                                selected python:test(language==default_language,'selected', nothing);"
-                tal:content="python:language_voc.getMsgid(language)"
-                i18n:translate="">Language</option>
-      </tal:language>
-    </select>
-    <input type="hidden" name="action" value="chooseDefault"/>
-    <button type="submit" name="manageCPSLanguage:method"
-            i18n:translate="button_select">Select</button>
-    </p>
-  </form>
-</tal:block>
-
-<tal:block tal:condition="python:len(language_keys) > len(languages)">
-  <h2 i18n:translate="language_add">Add languages</h2>
-  <form tal:attributes="action here/portal_url" method="post">
-    <p>
-    <tal:block repeat="language language_keys">
-      <tal:block condition="python:language not in languages">
-        <input type="checkbox" name="languages" value="en"
-               tal:attributes="value language;id language;"/>
-        <label tal:content="python:language_voc.getMsgid(language)"
-               tal:attributes="for language;"
-               i18n:translate="">language</label><br/>
-      </tal:block>
-    </tal:block>
-    </p>
-    <p>
-      <input type="hidden" name="action" value="add"/>
-      <button type="submit" name="manageCPSLanguage:method"
-              i18n:translate="button_add">Add</button>
-    </p>
-  </form>
-</tal:block>
-
-<tal:block tal:condition="python:len(languages) > 0">
-  <h2 i18n:translate="language_delete">Delete languages</h2>
-  <form tal:attributes="action here/portal_url" method="post">
-    <p>
-    <tal:block repeat="language language_keys">
-      <tal:block condition="python:language in languages">
-        <input type="checkbox" name="languages" value="en"
-               tal:attributes="value language;id language;"/>
-        <label tal:content="python:language_voc.getMsgid(language)"
-               tal:attributes="for language;"
-               i18n:translate="">language</label><br/>
-      </tal:block>
-    </tal:block>
-    </p>
-    <p>
-      <input type="hidden" name="action" value="delete"/>
-      <button type="submit" name="manageCPSLanguage:method"
-              i18n:translate="button_delete">Delete</button>
-    </p>
-  </form>
-</tal:block>
-
-</metal:main>
-</metal:body>
-</metal:html>
