@@ -10,7 +10,7 @@ from Products.CPSDefault.utils import manageCPSLanguage
 
 request = context.REQUEST
 context_url = context.portal_url.getPortalObject().absolute_url()
-template = 'language_manage_form'
+template = 'config_form'
 psm = ''
 
 if request is not None:
