@@ -692,11 +692,10 @@ table#login th {
 }
 
 table#portalConfiguration th {
-  width: 18em;
+  width: 14em;
   padding-bottom: 1em;
 }
 table#portalConfiguration td {
-  width: 18em;
   padding-bottom: 1em;
 }
 
