@@ -51,7 +51,7 @@ class TestSimpleAsRoot(TestSimple):
         self.assert_(self.portal.sections.folder_view())
 
     def XXXtestAdminSkinsAtRoot(self):
-        self.assert_(self.portal.reconfig_form())
+        self.assert_(self.portal.config_form())
         # XXX: move this to CPSDirectory ?
         self.assert_(self.portal.cpsdirectory_view())
         for dirname in ('members', 'groups', 'roles'):
