@@ -29,7 +29,9 @@ Bug fixes:
   previously.
 - Fixed the login form so that it renders well on MSIE too.
 - Test for #1239 Folderish documents workflows are not enough
-recursivefolderish document is republished
+  recursivefolderish document is republished
+- Usability: Merged the portal configuration form and the language configuration
+  form.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Less restrictive permission check to allow
